# feature-probes

./: .gitignore  LICENSE.md  README.md  pyproject.toml
cluster/: Dockerfile  README.md  annotation_pipeline.sbatch  build.sbatch  build.sh  env.toml  final_ablation.sbatch  final_ablation_eval_or_train.sbatch  generation_pipeline.sbatch  train.sbatch  train_multirun.sbatch
configs/: attention_test.yaml  main.yaml
configs/dataset/: our_long_form.yaml
configs/model/: apertus.yaml  llama.yaml
configs/our_dataset/: train_config_apertus_kl0.5.yaml  train_config_apertus_no_lora.yaml  train_config_llama_kl0.5.yaml  train_config_llama_no_lora.yaml
configs/training/: apertus_stability_fp32.yaml  lora.yaml
docs/: tips_and_tricks.md
docs/reports/: apertus-exploding-activations.md
feature_probes/: __init__.py  config.py  dataset.py  dataset_converters.py  train.py  trainer.py
feature_probes/data/: converters.py  dataset.py
feature_probes/evaluation/: evaluate.py
feature_probes/probes/: attention_probe.py  value_head_probe.py
feature_probes/training/: train.py  trainer.py
feature_probes/utils/: activation_analysis.py  model_utils.py  parsing.py  probe_loader.py  tokenization.py
scripts/: run_probe.py
