[project]
name = "feature-probes"
version = "0.1.0"
description = "Probes for feature detection in LLMs"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
  "torch>=2.4.0",
  "transformers>=4.56.0", 
  "peft>=0.18.0",
  "datasets>=2.0.0",
  "numpy>=1.24.0",
  "tqdm>=4.65.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "jaxtyping>=0.3.0,<=0.3.2",
  "beartype>=0.14.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "huggingface_hub>=0.20.0",

  "plotly>=5.22.0",
  "accelerate>=0.20.0",
  
  # Experiment tracking
  "wandb>=0.15.0",
  "hydra-core>=1.3",
  "omegaconf>=2.3",   # Hydra depends on this, good to pin explicitly
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "." ]
include = [
  "feature_probes",
  "feature_probes.*"
]
namespaces = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
